# bvresource_pool

./: CHANGELOG.md  README.md
.github/workflows/: build.yaml
benchmarks/: CMakeLists.txt
examples/: CMakeLists.txt
examples/async/: regression_smoke.cc  strand.cc
include/: CMakeLists.txt
include/yamail/resource_pool/async/: pool.hpp
include/yamail/resource_pool/async/detail/: pool_impl.hpp
tests/: CMakeLists.txt
